# aircraft-classifier

./: .flake8  .gitattributes  README.md  app.py  classifier.py  pyproject.toml
aircraft_classifier_colab/: F16_B1_C130_Mi24_model.ipynb  F16_Su24_model.ipynb
static/css/: style.css
static/uploads/: c130_01.jfif
templates/: index.html
