[project]
name = "aircraft-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykyta Fabrykator",email = "mykyta.fabrykator@gmail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
