[project]
name = "aircraft-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykyta Fabrykator",email = "mykyta.fabrykator@gmail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
